:rocket: Styles full

--- a/pages/tabelaPrecos.html
+++ b/pages/tabelaPrecos.html
@@ -10,17 +10,16 @@
   </head>
 
   <body>
-    <nav class="menu-nav">
-      <ul>
-        <a href="../index.html"><i class="fas fa-coffee"></i></a>
-        <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="promocoes.html">Promoções</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
     <main>
-      <section class="precos">
+      <section id="precos">
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="../index.html"><i class="fas fa-coffee"></i></a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="promocoes.html">Promoções</a></li>
+          </ul>
+        </nav>
         <h2>Tabela de Preços</h2>
         <table>
           <thead>
