--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <header>
       <nav class="menu-nav">
         <ul>
-          <a href="#"><i class="fas fa-coffee"></i></a>
+          <li><a href="../index.html"><i class="fas fa-coffee"></i></a></li>
           <li><a href="./pages/sobre.html">Sobre</a></li>
           <li><a href="./pages/menu.html">Menu</a></li>
           <li><a href="./pages/promocoes.html">Promoções</a></li>
-          <li><a href=".pages/contato.html">Contato</a></li>
         </ul>
         <button class="price-button">
           <a href="./pages/tabelaPrecos.html">
@@ -26,7 +25,7 @@
         </button>
       </nav>
 
-      <section class="header-content">
+      <section class="content">
         <h1>Cafeteria Vai no Coffee</h1>
         <p>
           Uma pausa para o café, um tempo para você!
