--- a/pages/tabelaPrecos.html
+++ b/pages/tabelaPrecos.html
@@ -5,21 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/_tabelaPrecos.css">
     <title>Tabela de Preços</title>
   </head>
 
   <body>
-    <main>
-      <section id="precos">
-        <nav class="menu-nav">
-          <ul>
-            <li><a href="../index.html"><i class="fas fa-coffee"></i></a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="promocoes.html">Promoções</a></li>
-          </ul>
-        </nav>
+    <header>
+      <nav class="navegacao">
+        <ul>
+          <li><a href="../index.html"><i class="fas fa-coffee"></i></a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="promocoes.html">Promoções</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main id="precos">
+      <section>
         <h2>Tabela de Preços</h2>
         <table>
           <thead>
