:tada: Project Finish

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
   <head>
     <meta charset="UTF-8">
@@ -33,17 +33,23 @@
           <img
             src="https://static.itdg.com.br/images/auto-auto/a28650d9a16731fcd02b535f3fca1fc8/shutterstock-529515136.jpg"
             alt="Expresso">
-          <figcaption>Expresso - R$ 5,00</figcaption>
+          <figcaption>Expresso</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR5PY5GLtZXM5wFybH2Fosb0DE3jyrjQauoQ&s"
             alt="Latte">
-          <figcaption>Latte - R$ 10,00</figcaption>
+          <figcaption>Latte</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img src="https://upload.wikimedia.org/wikipedia/commons/c/c8/Cappuccino_at_Sightglass_Coffee.jpg"
             alt="Cappuccino">
-          <figcaption>Cappuccino - R$ 12,00</figcaption>
+          <figcaption>Cappuccino</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
       </section>
 
@@ -51,18 +57,24 @@
         <h3>Doces</h3>
         <figure>
           <img src="https://t4.ftcdn.net/jpg/09/57/84/19/240_F_957841972_zSRusDp51wGthioViTpNkWgxFS9UB6Bu.jpg" alt="Cupcake de baunilha">
-          <figcaption>Cupcake Vanilla- R$ 6,00</figcaption>
+          <figcaption>Cupcake Vanilla</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img
             src="https://vitat.com.br/receitas/images/recipeshandler.jpg?id=4882&tipo=r&default=s&ims=fit-in/414x275/filters:quality(60)"
             alt="Brownie">
-          <figcaption>Brownie - R$ 7,00</figcaption>
+          <figcaption>Brownie</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img src="https://as1.ftcdn.net/v2/jpg/08/37/03/86/1000_F_837038676_6j3mhx1CVI0KsZU7rJPsgZKPFbmmq0TB.jpg"
             alt="Mini Donut">
-          <figcaption>Mini Donut - R$ 3,00</figcaption>
+          <figcaption>Mini Donut</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
       </section>
 
@@ -72,19 +84,25 @@
           <img
             src="https://as2.ftcdn.net/v2/jpg/08/65/71/19/1000_F_865711942_s0mVOpCH3DgwmOkqoHMP1WwOmgYAU9cH.jpg"
             alt="MilkShake">
-          <figcaption>Milkshake - R$ 8,00</figcaption>
+          <figcaption>Milkshake</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img
             src="https://t4.ftcdn.net/jpg/09/21/01/45/240_F_921014584_FxbjvL2txnigIegJ45uPXKJjCG3fS2lE.jpg"
             alt="Vanilla ice">
-          <figcaption>Vanilla Ice - R$ 10,00</figcaption>
+          <figcaption>Vanilla Ice</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img
             src="https://as1.ftcdn.net/v2/jpg/08/29/55/48/1000_F_829554897_nEShXDZEe5Yz1jPwt7REK4YECDwzQCzt.jpg"
             alt="Banana Split">
-          <figcaption>Banana Split - R$ 12,00</figcaption>
+          <figcaption>Banana Split</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
       </section>
 
@@ -94,19 +112,25 @@
           <img
             src="https://t4.ftcdn.net/jpg/08/03/06/73/240_F_803067320_k9frI53Zw6fPPNNBiIFCnqntT57WMDrl.jpg"
             alt="Coca-cola, batatas, hambuguer">
-          <figcaption>Combo 1 - R$ 35,00</figcaption>
+          <figcaption>Combo 1</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img
             src="https://t3.ftcdn.net/jpg/09/68/41/00/240_F_968410057_0QPbuXInwRi3I7QyGlA2aDCFBuJU94r9.jpg"
             alt="Hamburguer, batatas e milkshake">
-          <figcaption>Combo 2 - R$ 35,00</figcaption>
+          <figcaption>Combo 2</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
         <figure>
           <img
             src="https://as1.ftcdn.net/v2/jpg/05/84/85/90/1000_F_584859081_4wT3BMCVI4Sz423Q3nKNt26qHAUQxGu8.jpg"
             alt="Donut com coca-cola">
-          <figcaption>Combo 3 - R$ 15,00</figcaption>
+          <figcaption>Combo 3</figcaption>
+          <button>+</button>
+          <button>-</button>
         </figure>
       </section>
     </main>
