--- a/pages/tabelaPrecos.html
+++ b/pages/tabelaPrecos.html
@@ -14,53 +14,116 @@
     <header>
       <nav class="navegacao">
         <ul>
-          <li><a href="../index.html"><i class="fas fa-coffee"></i></a></li>
+          <li><a href="../index.html"><i class="fas fa-coffee"></i><span class="sr-only">Página inicial</span></a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="menu.html">Menu</a></li>
           <li><a href="promocoes.html">Promoções</a></li>
         </ul>
       </nav>
     </header>
+
     <main id="precos">
       <section>
-        <h2>Tabela de Preços</h2>
+        <h1>Tabela de Preços</h1>
+
+        <h2>Bebidas Quentes</h2>
         <table>
           <thead>
             <tr>
-              <th>Produto</th>
-              <th>Preço</th>
+              <th scope="col">Produto</th>
+              <th scope="col">Preço</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>Expresso</td>
-              <td>R$ 5,00</td>
+              <td>R$ 3,00</td>
             </tr>
             <tr>
               <td>Latte</td>
-              <td>R$ 10,00</td>
+              <td>R$ 6,00</td>
             </tr>
             <tr>
               <td>Cappuccino</td>
-              <td>R$ 12,00</td>
+              <td>R$ 9,00</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <h2>Bebidas Frias</h2>
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">Produto</th>
+              <th scope="col">Preço</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Milkshake</td>
+              <td>R$ 8,00</td>
             </tr>
             <tr>
-              <td>Bolo de Cenoura</td>
-              <td>R$ 6,00</td>
+              <td>Vanilla Ice</td>
+              <td>R$ 6,50</td>
+            </tr>
+            <tr>
+              <td>Banana Split</td>
+              <td>R$ 18,00</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <h2>Doces</h2>
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">Produto</th>
+              <th scope="col">Preço</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Cupcake</td>
+              <td>R$ 5,00</td>
             </tr>
             <tr>
               <td>Brownie</td>
               <td>R$ 7,00</td>
             </tr>
             <tr>
-              <td>Torta de Limão</td>
-              <td>R$ 8,00</td>
+              <td>Mini Donut</td>
+              <td>R$ 2,00 un.</td>
             </tr>
           </tbody>
         </table>
+
+        <h2>Combos</h2>
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">Produto</th>
+              <th scope="col">Preço</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Combo 1</td>
+              <td>R$ 25,00</td>
+            </tr>
+            <tr>
+              <td>Combo 2</td>
+              <td>R$ 30,00</td>
+            </tr>
+            <tr>
+              <td>Combo 3</td>
+              <td>R$ 15,00</td>
+            </tr>
+          </tbody>
+        </table>
+
       </section>
     </main>
-
   </body>
 
 </html>
