--- a/pages/promocoes.html
+++ b/pages/promocoes.html
@@ -28,7 +28,7 @@
     </header>
     <main id="promocoes">
       <section class="destaque">
-        <h2>Confira nossas Promoções</h2>
+        <h2>Confira nossas Promoções e Eventos</h2>
         <section class="destaque-item">
           <figure>
             <h3>Café Especial do Mês</h3>
